--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <button class="projects-button">Projects</button>
 
     <button class="aboutme-button">About Me</button>
+
+    <button class="aboutme-button">Contact</button>
     
     </div>
 
